JTAND-10232: Add ref and sha parameters
The parameters that are added enable submision from release branches.

--- a/action.yml
+++ b/action.yml
@@ -17,6 +17,12 @@ inputs:
     required: true
     description: 'Build target to detect build dependencies. If unspecified, will use "all", with will detect all dependencies used in all build targets (including tests and tools).'
     default: 'all'
+  ref:
+    required: false
+    description: 'The git ref to use for the snapshot. Defaults to the ref of the event that triggered the workflow.'
+  sha:
+    required: false
+    description: 'The git sha to use for the snapshot. Defaults to the sha of the event that triggered the workflow.'
 runs:
   using: 'node20'
   main: 'dist/index.js'
